[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://ui/interface/label_hp_bg.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/interface/label_HP_half.png" type="Texture" id=3]
[ext_resource path="res://ui/interface/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/interface/lifebar_bg_half.png" type="Texture" id=5]
[ext_resource path="res://ui/interface/lifebar_fill_half.png" type="Texture" id=6]
[ext_resource path="res://ui/buttons/shadedDark24.png" type="Texture" id=7]
[ext_resource path="res://ui/buttons/flatDark23.png" type="Texture" id=8]
[ext_resource path="res://ui/buttons/shadedDark25.png" type="Texture" id=9]
[ext_resource path="res://ui/buttons/flatDark24.png" type="Texture" id=10]
[ext_resource path="res://ui/buttons/shadedDark37.png" type="Texture" id=11]
[ext_resource path="res://ui/buttons/flatDark36.png" type="Texture" id=12]
[ext_resource path="res://ui/buttons/shadedDark36.png" type="Texture" id=13]
[ext_resource path="res://ui/buttons/flatDark35.png" type="Texture" id=14]
[ext_resource path="res://ui/Menu/icons8-pause-squared-filled-36.png" type="Texture" id=15]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 12
extra_spacing_bottom = 2
font_data = ExtResource( 4 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HUD" type="Container" parent="Control"]
editor/display_folded = true
margin_left = 10.0
margin_top = 10.0
margin_right = 534.0
margin_bottom = 296.0

[node name="HPContainer" type="HBoxContainer" parent="Control/HUD"]
anchor_right = 1.0
margin_bottom = 27.0
grow_horizontal = 0
size_flags_horizontal = 8
alignment = 2
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="PanelContainer" parent="Control/HUD/HPContainer"]
margin_left = 284.0
margin_right = 322.0
margin_bottom = 27.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Control/HUD/HPContainer/Background"]
margin_right = 38.0
margin_bottom = 27.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HUD/HPContainer/Background/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 25.0

[node name="Title" type="TextureRect" parent="Control/HUD/HPContainer/Background/MarginContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 18.0
margin_bottom = 17.0
size_flags_vertical = 4
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Number" type="Label" parent="Control/HUD/HPContainer/Background/MarginContainer/HBoxContainer"]
margin_left = 22.0
margin_top = 3.0
margin_right = 34.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2
valign = 1

[node name="TextureProgress" type="TextureProgress" parent="Control/HUD/HPContainer"]
margin_left = 326.0
margin_right = 524.0
margin_bottom = 27.0
grow_horizontal = 0
size_flags_horizontal = 8
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="ActionContainer" type="HBoxContainer" parent="Control/HUD"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -76.0
size_flags_vertical = 8
custom_constants/separation = 5

[node name="LeftContainer" type="ReferenceRect" parent="Control/HUD/ActionContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 0

[node name="LeftButton" type="TouchScreenButton" parent="Control/HUD/ActionContainer/LeftContainer"]
scale = Vector2( 0.635, 0.635 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
passby_press = true
action = "ui_left"

[node name="RightContainer" type="ReferenceRect" parent="Control/HUD/ActionContainer"]
margin_left = 55.0
margin_top = 26.0
margin_right = 105.0
margin_bottom = 76.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 2
size_flags_vertical = 8

[node name="RightButton" type="TouchScreenButton" parent="Control/HUD/ActionContainer/RightContainer"]
scale = Vector2( 0.635, 0.635 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
passby_press = true
action = "ui_right"

[node name="BContainer" type="ReferenceRect" parent="Control/HUD/ActionContainer"]
margin_left = 419.0
margin_top = 26.0
margin_right = 469.0
margin_bottom = 76.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 8

[node name="BButton" type="TouchScreenButton" parent="Control/HUD/ActionContainer/BContainer"]
scale = Vector2( 0.635, 0.635 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
passby_press = true
action = "ui_attack"

[node name="AContainer" type="ReferenceRect" parent="Control/HUD/ActionContainer"]
margin_left = 474.0
margin_right = 524.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 0

[node name="AButton" type="TouchScreenButton" parent="Control/HUD/ActionContainer/AContainer"]
scale = Vector2( 0.635, 0.635 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
passby_press = true
action = "ui_up"

[node name="PauseButton" type="TextureButton" parent="Control"]
pause_mode = 2
margin_left = 10.0
margin_top = 10.0
margin_right = 46.0
margin_bottom = 46.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 15 )
texture_focused = ExtResource( 15 )

[node name="PauseMenu" parent="Control" instance=ExtResource( 16 )]
pause_mode = 2
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 534.0
margin_bottom = 296.0

[node name="PanelContainer" parent="Control/PauseMenu" index="0"]
margin_left = 185.0
margin_top = 8.0
margin_right = 338.0
margin_bottom = 278.0

[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/SkipStage" to="." method="_on_SkipStage_pressed"]
[connection signal="pressed" from="Control/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/MuteMusic" to="." method="_on_MuteMusic_pressed"]
[connection signal="pressed" from="Control/PauseMenu/PanelContainer/MarginContainer/VBoxContainer/MuteSound" to="." method="_on_MuteSound_pressed"]

[editable path="Control/PauseMenu"]
